--- a/subcategories/geometry.html
+++ b/subcategories/geometry.html
@@ -393,13 +393,13 @@
                                     <h3 class="font-semibold text-gray-800">Arc Length Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate arc length calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/sector-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/sector--area-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Sector Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate sector calculator quickly and accurately.</p>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate sector area quickly and accurately.</p>
                                 </div>
                             </a>                            <a href="https://calcdomain.com/segment-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
@@ -448,6 +448,84 @@
                                 <div>
                                     <h3 class="font-semibold text-gray-800">Normal Line Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate normal line calculator quickly and accurately.</p>
+                                </div>
+                            </a>
+
+
+                             <a href="https://calcdomain.com/distance-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">2D Distance Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">alculate the distance between 2 points in a two-dimensional plane.</p>
+                                </div>
+                            </a> <a href="https://calcdomain.com/midpoint-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Midpoint Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Determines the point lying halfway between two points in the Cartesian coordinate system.</p>
+                                </div>
+                            </a>
+                             <a href="https://calcdomain.com/cone-volume-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Cone Volume Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">The volume of a cone is equal to 1/3 times pi times the length of the base radius r squared, times the height of the vertex h.</p>
+                                </div>
+                            </a>
+                             <a href="https://calcdomain.com/cylinder-volume-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Cylinder Volume Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Use this cylinder volume calculator to easily calculate the volume of a cylinder from its base radius and height in any metric..</p>
+                                </div>
+                            </a>
+                             <a href="https://calcdomain.com/sphere-volume-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Sphere Volume Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Calculate the sphere volume, the volume of a spherical cap or a hemisphere, with this sphere volume calculator.</p>
+                                </div>
+                            </a>
+
+
+
+
+
+                             <a href="https://calcdomain.com/rectangle-area-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Rectangle Area Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">Use this calculator to easily calculate the area of a rectangle given its sides (length and width).</p>
+                                </div>
+                            </a>
+                             <a href="https://calcdomain.com/herons-formula-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Heron's Formula Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">This calculator calculates the area of a triangle using Heron's formula. This formula gives the area of a triangle from the lengths of all three sides.</p>
+                                </div>
+                            </a>
+                             <a href="https://calcdomain.com/sector-area-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                                <div class="bg-blue-100 p-3 rounded-full">
+                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                                </div>
+                                <div>
+                                    <h3 class="font-semibold text-gray-800">Sector Area Calculator</h3>
+                                    <p class="text-sm text-gray-600 mt-1">This calculator finds the area of a sector when the radius (or diameter) and the angle are known.</p>
                                 </div>
                             </a>
                     </div>
