--- a/calorie-to-btu.html
+++ b/calorie-to-btu.html
@@ -97,7 +97,7 @@
         <nav class="text-sm mb-6 text-gray-600">
             <a href="/" class="hover:text-blue-600">Home</a>
             <span class="mx-2">»</span>
-            <a href="/categories/math-conversion.html" class="hover:text-blue-600">Math & Conversion</a>
+            <a href="math-conversion.html" class="hover:text-blue-600">Math & Conversion</a>
             <span class="mx-2">»</span>
             <a href="/subcategories/measurement-unit-conversions.html" class="hover:text-blue-600">Unit Conversions</a>
             <span class="mx-2">»</span>
