--- a/subcategories/geometry.html
+++ b/subcategories/geometry.html
@@ -19,7 +19,7 @@
         .card-hover:hover { transform: translateY(-5px); box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05); }
     </style>
     <!-- Ezoic, Google AdSense, GSC, and GA scripts would go here -->
-<script src="search.js" defer></script>
+<script src="https://calcdomain.com/search.js" defer></script>
 <!-- MathJax for LaTeX formulas -->
 <script>
   window.MathJax = {
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="/https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -54,7 +54,7 @@
     <!-- Main Content -->
     <div class="container mx-auto px-4 py-8">
         <div class="flex flex-col lg:flex-row gap-8">
-
+ 
             <!-- Left Column: Main Content -->
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
