should be all geometry2

--- a/polygon-calculator.html
+++ b/polygon-calculator.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>polygon calculator — Area, Perimeter & Angles (Regular & Irregular)</title>
   <meta name="description" content="Professional polygon calculator: compute area, perimeter, apothem/inradius, circumradius, interior/exterior angles for regular polygons; plus coordinate-based area for any irregular polygon (shoelace). Accessible, mobile‑first, and fast." />
-  <link rel="canonical" href="https://calcdomain.com/polygon-calculator" />
+  <link rel="canonical" href="https://calcdomain.com/polygon-calculator.html" />
   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/favicon.ico" />
@@ -17,7 +17,7 @@
   <!-- MathJax for LaTeX rendering -->
   <script defer id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-  <style>
+  <style>can
     :root { --focus: #0ea5e9; }
     body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Inter, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji"; }
     /* Visible focus */
@@ -230,9 +230,9 @@
           <div class="bg-white p-6 rounded-lg shadow">
             <h3 class="font-semibold text-lg mb-3">Related geometry tools</h3>
             <ul class="space-y-2 text-sm">
-              <li><a class="text-blue-600 hover:underline" href="regular-polygon.html">Regular Polygon Solver</a></li>
+              <li><a class="text-blue-600 hover:underline" href="regular-polygon-calculator.html">Regular Polygon Solver</a></li>
               <li><a class="text-blue-600 hover:underline" href="circle-calculator.html">Circle Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="triangle-solver.html">Triangle Solver</a></li>
+              <li><a class="text-blue-600 hover:underline" href="triangle-calculator.html">Triangle Solver</a></li>
             </ul>
           </div>
         </aside>
