--- a/rectangle-area-calculator.html
+++ b/rectangle-area-calculator.html
@@ -152,7 +152,7 @@
 
         <!-- Intro + Calculator -->
         <div id="print-section" class="bg-white p-6 rounded-lg shadow-sm">
-          <h1 class="text-3xl font-extrabold mb-2">Rectangle Area Calculator</h1>
+          <h1 class="text-3xl font-extrabold mb-2">Rectanglimit-calculatorle Area Calculator</h1>
           <p class="text-gray-700 mb-6">
             Enter two sides of a rectangle—length and width—in your preferred units to get the area
             (plus perimeter and diagonal). Built for students, engineers, architects, and anyone
@@ -387,10 +387,10 @@
           <div class="bg-white p-6 rounded-lg shadow-sm">
             <h3 class="font-bold text-lg mb-3">Related geometry tools</h3>
             <ul class="text-sm space-y-2">
-              <li><a class="text-blue-700 hover:underline" href="square-area-calculator.html">Square Area Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="triangle-area-calculator.html">Triangle Area Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="circle-area-calculator.html">Circle Area Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="rectangular-prism-calculator.html">Rectangular Prism (3D) Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="square-calculator.html">Square Area Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="triangle-calculator.html">Triangle Area Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="circle-calculator.html">Circle Area Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="rectangular-prism-volume.html">Rectangular Prism (3D) Volume Calculator</a></li>
             </ul>
           </div>
           <div class="bg-gray-100 rounded-lg h-60 flex items-center justify-center text-gray-500">
