--- a/tangent-line-calculator.html
+++ b/tangent-line-calculator.html
@@ -397,10 +397,10 @@
           <div class="bg-white p-6 rounded-2xl shadow">
             <h3 class="font-bold text-lg mb-3">Related geometry & calculus tools</h3>
             <ul class="space-y-2 text-sm">
-              <li><a href="derivative-calculator.html">Derivative Calculator</a></li>
+              <li><a href="derivative.html">Derivative Calculator</a></li>
               <li><a href="secant-line-calculator.html">Secant Line Calculator</a></li>
-              <li><a href="slope-calculator.html">Slope Calculator</a></li>
-              <li><a href="limit-calculator.html">Limit Calculator</a></li>
+              <li><a href="slope.html">Slope Calculator</a></li>
+              <li><a href="limit.html">Limit Calculator</a></li>
             </ul>
           </div>
           <div class="bg-slate-200 rounded-2xl h-64 flex items-center justify-center text-slate-600">
