--- a/volume-calculator.html
+++ b/volume-calculator.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Volume Calculator</title>
   <meta name="description" content="Professional volume calculator for common 3D shapes. Compute volume with step-by-step LaTeX formulas, inline validation, and unit conversions to m³, liters, and US gallons."/>
-  <link rel="canonical" href="https://calcdomain.com/math/geometry/volume-calculator.html"/>
+  <link rel="canonical" href="https://calcdomain.com/volume-calculator.html"/>
   <meta name="author" content="Ugo Candido"/>
 
   <!-- Icons (optional placeholders to align with site conventions) -->
