should be all geometry3

--- a/central-angle-calculator.html
+++ b/central-angle-calculator.html
@@ -363,9 +363,9 @@
             <ul class="space-y-2 text-sm">
               <li><a href="arc-length-calculator.html" class="text-blue-600 hover:underline">Arc Length Calculator</a></li>
               <li><a href="sector-area-calculator.html" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
-              <li><a href="chord-length-calculator.html" class="text-blue-600 hover:underline">Chord Length Calculator</a></li>
+              <li><a href="chord-calculator.html" class="text-blue-600 hover:underline">Chord Length Calculator</a></li>
               <li><a href="circle-calculator.html" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-            </ul>
+            </ul>chord-
           </div>
         </div>
       </aside>
@@ -610,6 +610,7 @@
       $('radius').value = '10';
       $('arcLength').value = '15.707963'; // ~ θ=1.5707963 rad for r=10 ⇒ 90°
       calc();
+
     });
   </script>
 </body>
