--- a/normal-line-calculator.html
+++ b/normal-line-calculator.html
@@ -321,8 +321,8 @@
             <h3 class="font-bold text-lg mb-3">Related math tools</h3>
             <ul class="space-y-2 text-sm">
               <li><a class="text-blue-600 hover:underline" href="tangent-line-calculator.html">Tangent Line Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="derivative-calculator.html">Derivative Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="slope-calculator.html">Slope Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="derivative.html">Derivative Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="slope.html">Slope Calculator</a></li>
             </ul>
           </div>
           <div class="bg-gray-200 rounded-lg h-64 flex items-center justify-center text-gray-600">Ad Placement (300×600)</div>
