--- a/pentagon-calculator.html
+++ b/pentagon-calculator.html
@@ -113,7 +113,7 @@
         <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="math.html" class="hover:text-blue-600">Math</a> &raquo;
-          <a href="subcategories/math-polygons.html" class="hover:text-blue-600">Polygon Geometry</a> &raquo;
+          <a href="subcategories/geometry.html" class="hover:text-blue-600">Geometry</a> &raquo;
           <span class="text-gray-900">Pentagon Calculator</span>
         </nav>
 
@@ -362,7 +362,7 @@
             <h3 class="font-bold text-lg mb-4">Related tools</h3>
             <ul class="space-y-2 text-sm">
               <li><a class="text-blue-700 hover:underline" href="polygon-calculator.html">Polygon Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="golden-ratio-calculator.html">Golden Ratio Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="golden-ratio.html">Golden Ratio Calculator</a></li>
               <li><a class="text-blue-700 hover:underline" href="regular-ngon-calculator.html">Regular n-gon Calculator</a></li>
             </ul>
           </div>
