--- a/pyramid-calculator.html
+++ b/pyramid-calculator.html
@@ -286,7 +286,7 @@
             <ul class="space-y-2 text-sm">
               <li><a class="text-blue-600 hover:underline" href="prism-calculator.html">Prism Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="cone-calculator.html">Cone Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="frustum-calculator.html">Frustum of a Pyramid</a></li>
+              <li><a class="text-blue-600 hover:underline" href="frustum-volume.html">Frustum of a Pyramid</a></li>
             </ul>
           </div>
         </div>
