--- a/ellipse-calculator.html
+++ b/ellipse-calculator.html
@@ -131,7 +131,7 @@
       <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
         <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
         <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-        <a href="analytic-geometry.html" class="hover:text-blue-700">Analytic Geometry</a> &raquo;
+        <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
         <span class="text-gray-900">Ellipse Calculator</span>
       </nav>
 
