--- a/subcategories/geometry.html
+++ b/subcategories/geometry.html
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="/https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
