should be all geometry4

--- a/chord-calculator.html
+++ b/chord-calculator.html
@@ -386,7 +386,7 @@
             <h3 class="font-bold text-lg mb-3">Related geometry tools</h3>
             <ul class="space-y-2 text-sm">
               <li><a class="text-blue-700 hover:underline" href="arc-length-calculator.html">Arc Length Calculator</a></li>
-              <li><a class="text-blue-700 hover:underline" href="circular-segment-calculator.html">Circular Segment Calculator</a></li>
+              <li><a class="text-blue-700 hover:underline" href="circular-segment.html">Circular Segment Calculator</a></li>
               <li><a class="text-blue-700 hover:underline" href="circle-calculator.html">Circle Calculator</a></li>
               <li><a class="text-blue-700 hover:underline" href="sector-area-calculator.html">Sector Area Calculator</a></li>
             </ul>
