--- a/right-triangle-calculator.html
+++ b/right-triangle-calculator.html
@@ -396,7 +396,6 @@
             <ul class="space-y-2 text-sm">
               <li><a class="text-blue-700 underline" href="triangle-calculator.html">General Triangle Calculator</a></li>
               <li><a class="text-blue-700 underline" href="pythagorean-triplets.html">Pythagorean Triplets Generator</a></li>
-              <li><a class="text-blue-700 underline" href="trigonometry-solver.html">Trigonometry Solver</a></li>
             </ul>
           </div>
           <div class="bg-gray-200 h-60 rounded-lg flex items-center justify-center text-gray-600">
@@ -686,7 +685,7 @@
           }
         });
       });
-
+circula
       // Initialize diagram captions
       showResults(false);
     })();
