--- a/segment-calculator.html
+++ b/segment-calculator.html
@@ -81,7 +81,7 @@
     "itemListElement":[
       {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
       {"@type":"ListItem","position":2,"name":"Math","item":"https://calcdomain.com/math.html"},
-      {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/geometry.html"},
+      {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/subcategories/geometry.html"},
       {"@type":"ListItem","position":4,"name":"Segment Calculator","item":"https://calcdomain.com/segment-calculator.html"}
     ]
   }
@@ -167,7 +167,7 @@
     <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
       <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
       <a href="math.html" class="hover:text-blue-600">Math</a> &raquo;
-      <a href="geometry.html" class="hover:text-blue-600">Geometry</a> &raquo;
+      <a href="subcategories/geometry.html" class="hover:text-blue-600">Geometry</a> &raquo;
       <span class="text-gray-900">Segment Calculator</span>
     </nav>
 
