--- a/parabola-calculator.html
+++ b/parabola-calculator.html
@@ -83,7 +83,7 @@
   "itemListElement":[
     {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
     {"@type":"ListItem","position":2,"name":"Math","item":"https://calcdomain.com/math.html"},
-    {"@type":"ListItem","position":3,"name":"Analytic Geometry","item":"https://calcdomain.com/analytic-geometry.html"},
+    {"@type":"ListItem","position":3,"name":"Geometry","item":"https://calcdomain.com/subcategories/geometry.html"},
     {"@type":"ListItem","position":4,"name":"Parabola Calculator","item":"https://calcdomain.com/parabola-calculator.html"}
   ]
 }
@@ -140,7 +140,7 @@
       <nav class="hidden md:flex gap-6 text-sm">
         <a href="search.html" class="hover:text-blue-700">Search</a>
         <a href="math.html" class="hover:text-blue-700">Math</a>
-        <a href="analytic-geometry.html" class="hover:text-blue-700">Analytic Geometry</a>
+        <a href="subcategories/geometry.html" class="hover:text-blue-700">Geometry</a>
       </nav>
       <button class="md:hidden p-2 rounded hit" aria-label="Open menu">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
@@ -153,7 +153,7 @@
       <nav class="text-sm text-slate-600 mb-4" aria-label="Breadcrumb">
         <a href="index.html" class="hover:text-blue-700">Home</a> &raquo;
         <a href="math.html" class="hover:text-blue-700">Math</a> &raquo;
-        <a href="analytic-geometry.html" class="hover:text-blue-700">Analytic Geometry</a> &raquo;
+        <a href="subcategorries/geometry.html" class="hover:text-blue-700">Geometry</a> &raquo;
         <span class="text-slate-900">Parabola Calculator</span>
       </nav>
 
