--- a/herons-formula-calculator.html
+++ b/herons-formula-calculator.html
@@ -567,7 +567,7 @@
 
       // Initialize empty preview
       drawTriangle();
-    });
+    });herons-formula-calculator.html
   </script>
 </body>
 </html>
