--- a/subcategories/core-math-algebra.html
+++ b/subcategories/core-math-algebra.html
@@ -40,7 +40,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-4 lg:px-6 py-4 flex justify-between items-center">
-            <a href="../index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+            <a href="https://calcdomain.com/index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
             <div class="w-full max-w-md hidden md:block">
                 <div class="relative">
                     <input type="search" placeholder="Search for a calculator..." class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500">
@@ -59,8 +59,8 @@
             <main class="w-full lg:w-2/3">
                 <!-- Breadcrumbs -->
                 <nav class="text-sm mb-4 text-gray-600">
-                    <a href="../index.html" class="hover:text-blue-600">Home</a> &raquo;
-                    <a href="../math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
+                    <a href="https://calcdomain.com/index.html" class="hover:text-blue-600">Home</a> &raquo;
+                    <a href="https://calcdomain.com/math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
                     <span>Core Math & Algebra</span>
                 </nav>
 
@@ -161,7 +161,7 @@
                                     <h3 class="font-semibold text-gray-800">Equation Solver</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate equation solver quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/quadratic-formula-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/quadratic-formula.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -177,23 +177,24 @@
                                     <h3 class="font-semibold text-gray-800">Factoring Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate factoring calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/gcf-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/gcf.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
+
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
                                 <div>
                                     <h3 class="font-semibold text-gray-800">GCF Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate gcf calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/lcm-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/lcm.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
-                                <div>
+                                <div>.html" cla
                                     <h3 class="font-semibold text-gray-800">LCM Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate lcm calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/prime-factorization-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/prime-factorization.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -201,15 +202,7 @@
                                     <h3 class="font-semibold text-gray-800">Prime Factorization Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate prime factorization calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/statistics-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
-                                <div class="bg-blue-100 p-3 rounded-full">
-                                    <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
-                                </div>
-                                <div>
-                                    <h3 class="font-semibold text-gray-800">Statistics Calculator</h3>
-                                    <p class="text-sm text-gray-600 mt-1">Calculate statistics calculator quickly and accurately.</p>
-                                </div>
-                            </a>                            <a href="https://calcdomain.com/mean-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                         <a href="https://calcdomain.com/mean-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -233,7 +226,7 @@
                                     <h3 class="font-semibold text-gray-800">Mode Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate mode calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/standard-deviation-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/standard-deviation.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
@@ -273,7 +266,7 @@
                                     <h3 class="font-semibold text-gray-800">Regression Calculator</h3>
                                     <p class="text-sm text-gray-600 mt-1">Calculate regression calculator quickly and accurately.</p>
                                 </div>
-                            </a>                            <a href="https://calcdomain.com/probability-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
+                            </a>                            <a href="https://calcdomain.com/probability.html" class="card-hover bg-white p-5 rounded-lg shadow-sm border flex items-start gap-4">
                                 <div class="bg-blue-100 p-3 rounded-full">
                                     <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
                                 </div>
